# cookiecutter-data-science

./: .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: conftest.py  test_creation.py
{{ cookiecutter.repo_name }}/: .autoenv.zsh  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
{{ cookiecutter.repo_name }}/docs/: conf.py
{{ cookiecutter.repo_name }}/src/data/: make_dataset.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.project_name.lower().replace(' ', '_').replace('-', '_') }}/data/: make_dataset.py
