# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "cookiecutter-data-science"
version = "0.1.0"
description = "Cookiecutter template for Python projects"
readme = "README.md"
authors = ["Steven Walker"]
license = "MIT"
repository = "https://github.com/tetrapyloctomy/cookiecutter-data-science"
keywords = ["cookiecutter", "template", "packages", "black"]

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = []

[tool.poetry.dependencies]
python = "^3.7"
cookiecutter = "^1.7.2"
lice = "^0.6"

[tool.poetry.dev-dependencies]
darglint = "^1.5.8"
isort = "^5.7.0"
pyupgrade = "^2.7.4"
black = "^20.8b1"
mypy = "^0.790"
bandit = "^1.7.0"
safety = "^1.10.3"
pytest = "^6.2.1"
pylint = "^2.5.3"
pydocstyle = "^5.0.2"
pre-commit = "^2.9.3"

[tool.black]
# https://github.com/psf/black
line-length = 88
target-version = ["py38"]
exclude = "({{ cookiecutter.project_name }}/|.eggs|.git|.hg|.mypy_cache|.nox|.tox|.venv|.svn|_build|buck-out|build|dist)"

[tool.isort]
# https://github.com/timothycrosley/isort/
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true
line_length = 80
