[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
readme = "README.md"
authors = [
  "{{ cookiecutter.author_name }} <{{ cookiecutter.email }}>"
]

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"
typer = {extras = ["all"], version = "^0.3.2"}
rich = "^9.8.2"
python-dotenv = "^0.5.1"

[tool.poetry.dev-dependencies]
darglint = "^1.5.8"
isort = "^5.7.0"
pyupgrade = "^2.7.4"
black = "^20.8b1"
mypy = "^0.790"
bandit = "^1.7.0"
safety = "^1.10.3"
pytest = "^6.2.1"
pylint = "^2.6.0"
pydocstyle = "^5.1.1"
pre-commit = "^2.9.3"
ipython = "^7.19.0"
ptpython = "^3.0.10"
portray = "^1.5.0"

[tool.black]
# https://github.com/psf/black
line-length = 88
target-version = ["py38"]

[tool.isort]
# https://github.com/timothycrosley/isort/
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
indent = 4
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.portray]
output_dir = "docs"

[tool.portray.mkdocs.theme]
name = "material"
palette = {primary = "pink", accent = "cyan", scheme = "slate"}
