[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
readme = "README.md"
authors = [
  "{{ cookiecutter.author_name }} <{{ cookiecutter.email }}>"
]

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"
hydra-core = "^1.0.5"
python-dotenv = "^0.5.1"
rich = "^9.8.2"
typer = {extras = ["all"], version = "^0.3.2"}

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black = "^20.8b1"
darglint = "^1.5.8"
ipython = "^7.19.0"
isort = "^5.7.0"
mypy = "^0.790"
portray = "^1.5.0"
pre-commit = "^2.9.3"
ptpython = "^3.0.10"
pydocstyle = "^5.1.1"
pylint = "^2.6.0"
pytest = "^6.2.1"
pyupgrade = "^2.7.4"
safety = "^1.10.3"

[tool.black]
# https://github.com/psf/black
line-length = 88
target-version = ["py38"]

[tool.isort]
# https://github.com/timothycrosley/isort/
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
indent = 4
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.portray]
output_dir = "docs"

[tool.portray.mkdocs.theme]
name = "material"
palette = {primary = "pink", accent = "cyan", scheme = "slate"}
